--- a/views/partials/adminHeader.hbs
+++ b/views/partials/adminHeader.hbs
@@ -76,7 +76,7 @@
             </ul>
             <hr>
             <ul class="menu-aside">
-                <li class="menu-item has-submenu">
+                {{!-- <li class="menu-item has-submenu">
                     <a class="menu-link" href="#"> <i class="icon material-icons md-settings"></i>
                         <span class="text">Settings</span>
                     </a>
@@ -84,7 +84,7 @@
                         <a href="page-settings-1.html">Setting sample 1</a>
                         <a href="page-settings-2.html">Setting sample 2</a>
                     </div>
-                </li>
+                </li> --}}
                 <li class="menu-item">
                     <a class="menu-link" href="/admin/logout"> <i class="icon material-icons md-exit_to_app"></i>
                         <span class="text"> Logout </span>
