--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -116,13 +116,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 <script>
-
-
     $(document).ready(function () {
         $('.action').click(function () {
             var id = $(this).data('product-id');
-
-            // Store reference to $(this) in a variable for use inside AJAX success and error callbacks
             var $this = $(this);
 
             Swal.fire({
@@ -142,95 +138,84 @@
                         data: JSON.stringify({ id: id }),
                         success: function (productData) {
                             console.log("Product removed from Cart successfully");
-                            // If you want to remove the row from the table upon successful removal
-                            $this.closest('tr').remove(); // Use $this instead of $(this)
-                            // swal("Removed from wishlist", "The product has been removed from your wishlist.", "success");
-                            {
-                                Swal.fire({
-                                    title: 'Removed!',
-                                    text: 'Product Succesfully Removed from Cart!!!',
-                                    icon: 'success',
-                                    confirmButtonText: 'Cool'
-                                }).then(()=> window.location.reload())
-                            }
-
-
+                            $this.closest('tr').remove();
+                            Swal.fire({
+                                title: 'Removed!',
+                                text: 'Product Succesfully Removed from Cart!!!',
+                                icon: 'success',
+                                confirmButtonText: 'Cool'
+                            }).then(() => window.location.reload());
                         },
                         error: function (xhr, status, error) {
                             console.error("Error removing product from wishlist:", error);
                             swal("Error", "Something went wrong. Please try again later.", "error");
                         }
                     });
-                    Swal.fire({
-                        title: "Deleted!",
-                        text: "Your file has been deleted.",
-                        icon: "success"
-                    });
                 }
             });
-
-
         });
-    });
 
-    // Increment and Decrement quantity
-    {{!-- $('.wrap-num-product').on('click', '.fa-plus, .fa-minus', function () {
-        const cartId = $(this).closest('tr').find('.num-product').prop('id');
-        const newValue = $(this).hasClass('fa-plus') ? parseInt($(`#${cartId}`).val()) + 1 : parseInt($(`#${cartId}`).val()) - 1;
-        if (newValue > 0) {
-            $(`#${cartId}`).val(newValue);
-            updateCartItemQuantity(cartId, newValue);
+       $('.fa-plus, .fa-minus').click(function () {
+    const $row = $(this).closest('tr');
+    const cartId = $row.find('.num-product').prop('id');
+    const stock = parseInt($row.data('stock'));
+    const currentValue = parseInt($(`#${cartId}`).val());
+    const newValue = $(this).hasClass('fa-plus') ? currentValue + 1 : currentValue - 1;
+    const maxQuantity = 10; // Maximum allowed quantity
+
+    // Check stock before incrementing
+    if ($(this).hasClass('fa-plus')) {
+        if (newValue > stock) {
+            Swal.fire({
+                icon: 'error',
+                title: 'Oops...',
+                text: `Cannot exceed available stock of ${stock}.`,
+            });
+            return; // Do not allow increment if it exceeds stock
         }
-    }); --}}
-        $('.fa-plus, .fa-minus').click(function () {
-        const cartId = $(this).closest('tr').find('.num-product').prop('id');
-        const newValue = $(this).hasClass('fa-plus') ? parseInt($(`#${cartId}`).val()) + 1 : parseInt($(`#${cartId}`).val()) - 1;
-        if (newValue > 0) {
-            $(`#${cartId}`).val(newValue);
-            updateCartItemQuantity(cartId, newValue);
+        if (newValue > maxQuantity) {
+            Swal.fire({
+                icon: 'error',
+                title: 'Limit Reached',
+                text: `Cannot add more than ${maxQuantity} items.`,
+            });
+            return; // Do not allow increment if it exceeds max quantity
         }
-    });
-
-    // Update cart item quantity
-    function updateCartItemQuantity(cartId, newValue) {
-        $.ajax({
-            url: '/updatecart',
-            method: 'POST',
-            contentType: 'application/json',
-            data: JSON.stringify({ cartIdForUpdate: cartId, newValue: newValue }),
-            success: function (data) {
-                console.log("received from javascript BROOOOOOOOO", data)
-                if (data.success) {
-
-
-                    console.log('Response from server:', data);
-                    // Update the total amount for the specific cart item
-                    $(`#totalPerItem-${cartId}`).text(data.items[0].totalAmount);
-                    // Update the subtotal and total in the UI
-                  //  $('#Subtotal').text(data.cartValue[0].total);
-                   // $('#total').text(data.cartValue[0].total);
-                    updateCartTotal();
-
-
-                } else {
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Oops...',
-                        text: data.message,
-                    }).then(() => window.location.reload())
-
-
-                }
-
-            },
-            error: function (error) {
-                console.log(error)
-            },
-
-        });
     }
 
-    function updateCartTotal() {
+    if (newValue > 0) {
+        $(`#${cartId}`).val(newValue);
+        updateCartItemQuantity(cartId, newValue);
+    }
+});
+
+
+        function updateCartItemQuantity(cartId, newValue) {
+            $.ajax({
+                url: '/updatecart',
+                method: 'POST',
+                contentType: 'application/json',
+                data: JSON.stringify({ cartIdForUpdate: cartId, newValue: newValue }),
+                success: function (data) {
+                    console.log("Received from server:", data);
+                    if (data.success) {
+                        $(`#totalPerItem-${cartId}`).text(data.items[0].totalAmount);
+                        updateCartTotal();
+                    } else {
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Oops...',
+                            text: data.message,
+                        }).then(() => window.location.reload());
+                    }
+                },
+                error: function (error) {
+                    console.log(error);
+                },
+            });
+        }
+
+        function updateCartTotal() {
             let subtotal = 0;
             $('.shopping-summery tbody tr').each(function () {
                 const itemTotal = parseFloat($(this).find('td[data-title="Cart"] span').text().replace('₹', ''));
@@ -242,9 +227,5 @@
 
         // Initial cart total calculation
         updateCartTotal();
-    
-
-
-
-
+    });
 </script>
