--- a/views/user/changepassword.hbs
+++ b/views/user/changepassword.hbs
@@ -28,7 +28,12 @@
                                             aria-controls="orders" aria-selected="false"><i
                                                 class="fi-rs-shopping-bag mr-10"></i>Orders</a>
                                     </li>
-                                
+                                <li class="nav-item">
+                                        <a class="nav-link" id="track-orders-tab" 
+                                            href="/wallet" role="tab" aria-controls="track-orders"
+                                            aria-selected="false"><i
+                                                class="fi-rs-shopping-cart-check mr-10"></i>Wallet</a>
+                                    </li>
                                    
                                     <li class="nav-item">
                                         <a class="nav-link" id="address-tab" href="/addresses"
