--- a/views/user/editProfile.hbs
+++ b/views/user/editProfile.hbs
@@ -29,6 +29,12 @@
                                                 class="fi-rs-shopping-bag mr-10"></i>Orders</a>
                                     </li>
                                     <li class="nav-item">
+                                        <a class="nav-link" id="track-orders-tab" 
+                                            href="/wallet" role="tab" aria-controls="track-orders"
+                                            aria-selected="false"><i
+                                                class="fi-rs-shopping-cart-check mr-10"></i>Wallet</a>
+                                    </li>
+                                    <li class="nav-item">
                                         <a class="nav-link" id="address-tab" href="/addresses"
                                             role="tab" aria-selected="true"><i class="fi-rs-marker mr-10"></i>My
                                             Address</a>
