--- a/views/user/checkout.hbs
+++ b/views/user/checkout.hbs
@@ -480,85 +480,93 @@
     let couponStatus
     let originalSubTotal = Number(document.getElementsByName('subTotal')[0].value);
 
-    const validateCoupon = async () => {
-        couponEl = document.getElementById('copon').value;
-        subTotal = Number(document.getElementsByName('subTotal')[0].value);
+   const validateCoupon = async () => {
+    couponEl = document.getElementById('copon').value;
+    subTotal = Number(document.getElementsByName('subTotal')[0].value);
 
-        console.log(couponEl);
-        console.log('heloooo from validate coupon...............');
-        const response = await fetch('/validate_coupon', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({
-                couponVal: couponEl,
-                subTotal: subTotal
-            })
-        });
+    console.log(couponEl);
+    console.log('heloooo from validate coupon...............');
+    const response = await fetch('/validate_coupon', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+        },
+        body: JSON.stringify({
+            couponVal: couponEl,
+            subTotal: subTotal
+        })
+    });
 
-        console.log('hiiiii from coupon status........;;;;;;');
-        couponData = await response.json();
-        console.log(couponData);
+    console.log('hiiiii from coupon status........;;;;;;');
+    couponData = await response.json();
+    console.log(couponData);
+};
 
+const toggleCoupon = async () => {
+    ct += 1
+    console.log(ct, "ctttttttttttttttttttttttttttt")
+    couponEl = document.getElementById('copon').value;
+    currentStatus = document.getElementById('couponBtn').innerText.trim();
+    endpoint = currentStatus === 'Apply' ? '/apply_coupon' : '/remove_coupon';
 
+    const response = await fetch(endpoint, {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+        },
+        body: JSON.stringify({ couponVal: couponEl, subTotal: originalSubTotal })
+    });
+
+    couponData = await response.json();
+
+    const setCouponStatus = (msg, element) => {
+        element.innerHTML = `<p>${msg}</p>`;
+        setTimeout(() => {
+            element.style.opacity = 0;
+            element.innerHTML = '';
+        }, 2000);
     };
-    const toggleCoupon = async () => {
-        ct += 1
-        console.log(ct, "ctttttttttttttttttttttttttttt")
-        couponEl = document.getElementById('copon').value;
-        currentStatus = document.getElementById('couponBtn').innerText.trim();
-        endpoint = currentStatus === 'Apply' ? '/apply_coupon' : '/remove_coupon';
 
-        const response = await fetch(endpoint, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({ couponVal: couponEl, subTotal: originalSubTotal })
+    const couponMsg = document.getElementById('couponMsg');
+    const sCoponMsg = document.getElementById('sCoponMsg');
+
+    if (couponData.status === 'invalid') {
+        ct = 0
+        setCouponStatus('Invalid coupon', couponMsg);
+    } else if (couponData.status === 'expired') {
+        ct = 0
+        setCouponStatus('Coupon has expired!', couponMsg);
+        Swal.fire({
+            icon: 'error',
+            title: 'Oops...',
+            text: 'This coupon has expired!',
         });
+    } else if (couponData.status === 'already_used') {
+        ct = 0
+        setCouponStatus('Coupon already used!', couponMsg);
+        Swal.fire({
+            icon: 'info',
+            title: 'Coupon Already Used',
+            text: 'You have already used this coupon!',
+        });
+    } else if (couponData.status === 'not_used') {
+        ct = 0
+        setCouponStatus('Coupon not used yet!', couponMsg);
+    } else if (couponData.status === 'removed') {
+        setCouponStatus('Coupon removed successfully', couponMsg);
+        document.getElementById('couponBtn').innerHTML = '<i class="fi-rs-label mr-10"></i>Apply';
+    } else if (couponData.status === 'applied') {
+        setCouponStatus('Coupon applied successfully', sCoponMsg);
+        document.getElementById('couponBtn').innerHTML = '<i class="fi-rs-label mr-10"></i>Remove';
+    }
 
-        couponData = await response.json();
-
-        const setCouponStatus = (msg, element) => {
-            element.innerHTML = `<p>${msg}</p>`;
-            setTimeout(() => {
-                element.style.opacity = 0;
-                element.innerHTML = '';
-            }, 2000);
-        };
-
-        const couponMsg = document.getElementById('couponMsg');
-        const sCoponMsg = document.getElementById('sCoponMsg');
-
-        if (couponData.status === 'invalid') {
-            ct = 0
-            setCouponStatus('Invalid coupon', couponMsg);
-        } else if (couponData.status === 'expired') {
-            ct = 0
-            setCouponStatus('Coupon has expired!', couponMsg);
-        } else if (couponData.status === 'already_used') {
-            ct = 0
-            setCouponStatus('Coupon already used!', couponMsg);
-        } else if (couponData.status === 'not_used') {
-            ct = 0
-            setCouponStatus('Coupon not used yet!', couponMsg);
-        } else if (couponData.status === 'removed') {
-
-            setCouponStatus('Coupon removed successfully', couponMsg);
-            document.getElementById('couponBtn').innerHTML = '<i class="fi-rs-label mr-10"></i>Apply';
-        } else if (couponData.status === 'applied') {
-            setCouponStatus('Coupon applied successfully', sCoponMsg);
-            document.getElementById('couponBtn').innerHTML = '<i class="fi-rs-label mr-10"></i>Remove';
-        }
-
-        if (couponData.status === 'applied' || couponData.status === 'removed') {
-            document.getElementById('new_sub_total').innerHTML = `<strong>${couponData.newTotal + 50}</strong>`;
-            document.getElementsByName('subTotal')[0].value = couponData.newTotal + 50;
-            document.getElementById('copoun_code').innerHTML = `<small>${couponEl}</small>`;
-            document.getElementById('discount_amt').innerHTML = `<span class="text-success">-${couponData.discountAmt}</span>`;
-        }
-    };
+    if (couponData.status === 'applied' || couponData.status === 'removed') {
+        document.getElementById('new_sub_total').innerHTML = `<strong>${couponData.newTotal + 50}</strong>`;
+        document.getElementsByName('subTotal')[0].value = couponData.newTotal + 50;
+        document.getElementById('copoun_code').innerHTML = `<small>${couponEl}</small>`;
+        document.getElementById('discount_amt').innerHTML = `<span class="text-success">-${couponData.discountAmt}</span>`;
+    }
+};
 
 
 
